--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -15,7 +15,7 @@
         "scripts": ["analytics.js"]
     },
     "content_scripts": [{
-        "matches": ["https://docs.google.com/presentation/*"],
+        "matches": ["https://docs.google.com/presentation/*","https://docs.google.com/drawings/*],
         "js": ["content.js"],
         "run_at": "document_end"
     }],
