--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -15,7 +15,12 @@
         "scripts": ["analytics.js"]
     },
     "content_scripts": [{
-        "matches": ["https://docs.google.com/presentation/*","https://docs.google.com/drawings/*"],
+        "matches": [
+            "https://docs.google.com/presentation/*",
+            "https://docs.google.com/drawings/*",
+            "https://drive.google.com/*",
+            "https://calendar.google.com/*"
+        ],
         "js": ["content.js"],
         "run_at": "document_end"
     }],
