--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,36 +1,44 @@
 {
-
     "manifest_version": 2,
     "name": "Stop Slide Scrolling in Google Presentation",
-    "version": "0.1.2",
+    "version": "0.1.3",
     "author": "Owen Mundy",
     "homepage_url": "https://github.com/sneakaway-studio/stop-slide-scrolling",
-    "description": "Removes annoying accidental slide scrolling behavior in Google Drive Presentations",
+    "description": "Removes annoying accidental slide scrolling behavior in Google Drive Presentations, Drawings, Calendar, etc.",
     "icons": {
-        "48": "assets/img/icon48.png",
+        "16": "assets/img/icon16.png",
         "48": "assets/img/icon48.png",
         "128": "assets/img/icon128.png"
     },
-    "background": {
-        "scripts": ["analytics.js"]
+    "browser_action": {
+        "default_icon": {
+            "16": "assets/img/icon16.png",
+            "48": "assets/img/icon48.png"
+        },
+        "default_title": "Stop Slide Scrolling in Google Presentation",
+        "default_popup": "pages/popup.html"
     },
+    "background": {
+		"scripts": [
+			"assets/js/background.js"
+		]
+	},
     "content_scripts": [{
         "matches": [
+            "https://docs.google.com/*",
             "https://docs.google.com/presentation/*",
             "https://docs.google.com/drawings/*",
             "https://drive.google.com/*",
             "https://calendar.google.com/*"
         ],
-        "js": ["content.js"],
+        "js": ["assets/js/content.js"],
         "run_at": "document_end"
     }],
-    "converted_from_user_script": true,
 
     "permissions": [
-        "https://www.google-analytics.com/"
+		"storage"
     ],
     "offline_enabled": true,
-    "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'"
-
+	"content_security_policy": "script-src 'self'; object-src 'self';"
 
 }
